--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
 
-  build:
+  build_dev_app:
 
     runs-on: ubuntu-latest
 
@@ -26,7 +26,7 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file nodejs_apps/dev-app/Dockerfile --tag devnodeapp:$(date +%s)
 
-  push_to_registry:
+  push_dev_app:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -53,3 +53,42 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  build_dev1_app:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file nodejs_apps/dev1-app/Dockerfile --tag dev1nodeapp:$(date +%s)
+
+  push_dev1_app:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DHUSER }}
+          password: ${{ secrets.DHPW }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: dahknesh232/testapps
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: nodejs_apps/dev1-app/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+
