--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -51,8 +51,8 @@ jobs:
           context: .
           file: nodejs_apps/dev-app/Dockerfile
           push: true
-          tags: dev-${{ steps.meta.outputs.tags }}
-          labels: dev-${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}-dev
+          labels: ${{ steps.meta.outputs.labels }}-dev
 
   build_dev1_app:
 
@@ -88,7 +88,7 @@ jobs:
           context: .
           file: nodejs_apps/dev1-app/Dockerfile
           push: true
-          tags: dev1-${{ steps.meta.outputs.tags }}
-          labels: dev1-${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}-dev1
+          labels: ${{ steps.meta.outputs.labels }}-dev1
 
 
