testing some new actions development

--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -51,8 +51,8 @@ jobs:
           context: .
           file: nodejs_apps/dev-app/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}-dev
-          labels: ${{ steps.meta.outputs.labels }}-dev
+          tags: ${{ steps.meta.outputs.tags }}-dev-1.0.1000
+          labels: ${{ steps.meta.outputs.labels }}-dev-1.0.1000
 
   build_dev1_app:
 
@@ -88,7 +88,7 @@ jobs:
           context: .
           file: nodejs_apps/dev1-app/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}-dev1
-          labels: ${{ steps.meta.outputs.labels }}-dev1
+          tags: ${{ steps.meta.outputs.tags }}-dev1-1.0.1000
+          labels: ${{ steps.meta.outputs.labels }}-dev1-1.0.1000
 
 
