--- a/nodejs_apps/dev1-app/Dockerfile
+++ b/nodejs_apps/dev1-app/Dockerfile
@@ -11,8 +11,8 @@ COPY package*.json ./
 RUN npm install
 
 # Copy the rest of the application code to the working directory
-COPY . .
-COPY app1.js ./
+COPY * .
+
 # Expose the port your application will listen on
 EXPOSE 3000
 
