--- a/nodejs_apps/dev-app/Dockerfile
+++ b/nodejs_apps/dev-app/Dockerfile
@@ -1,6 +1,8 @@
 # Use an official Node.js image as the base image
 FROM node:14
 
+RUN mkdir -p /app
+
 # Set the working directory inside the container
 WORKDIR /app
 
