--- a/nodejs_apps/dev1-app/Dockerfile
+++ b/nodejs_apps/dev1-app/Dockerfile
@@ -16,7 +16,7 @@ RUN npm install
 COPY * .
 
 # Expose the port your application will listen on
-EXPOSE 3000
+EXPOSE 3100
 
 # Define the command to run your application
-CMD ["node", "app1.js"]
+RUN npm start
