--- a/nodejs_apps/dev-app/Dockerfile
+++ b/nodejs_apps/dev-app/Dockerfile
@@ -1,4 +1,4 @@
-# Use an official Node.js image as the base image
+# Use an official Node.js runtime as a parent image
 FROM node:14
 
 # Set the working directory inside the container
@@ -7,13 +7,14 @@ WORKDIR /app
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
-# Install the application dependencies
+# Install app dependencies
 RUN npm install
 
-# Copy the rest of the application code to the working directory
+# Copy all your application code to the working directory
 COPY . .
-# Expose the port your application will listen on
+
+# Expose the port that your app will run on
 EXPOSE 3000
 
 # Define the command to run your application
-RUN npm start
+CMD ["node", "app.js"]
