--- a/nodejs_apps/dev1-app/Dockerfile
+++ b/nodejs_apps/dev1-app/Dockerfile
@@ -1,7 +1,5 @@
-# Use an official Node.js image as the base image
+# Use an official Node.js runtime as a parent image
 FROM node:14
-
-RUN mkdir -p /app
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -9,14 +7,14 @@ WORKDIR /app
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
-# Install the application dependencies
+# Install app dependencies
 RUN npm install
 
-# Copy the rest of the application code to the working directory
+# Copy all your application code to the working directory
 COPY . .
 
-# Expose the port your application will listen on
+# Expose the port that your app will run on
 EXPOSE 3100
 
 # Define the command to run your application
-RUN npm start
+CMD ["node", "app1.js"]
