--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -26,7 +26,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file nodejs_apps/dev-app/Dockerfile --tag devnodeapp:$(date +%s)
+      run: |
+          cd testapps 
+          cd nodejs_apps
+          cd dev-app
+          docker build . --file Dockerfile --tag reg.anny:5000/devnodeapp:$(date +%s)
+          docker build . --file Dockerfile --tag dahknesh232/testapps:devnodeapp-$(date +%s)
 
   push_dev_app:
     name: Push Docker image to Docker Hub
@@ -51,7 +56,7 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
-          file: nodejs_apps/dev-app/Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}-dev-1.0.1009
           labels: ${{ steps.meta.outputs.labels }}-dev-1.0.1009
