--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -27,8 +27,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-          docker build . --file Dockerfile --tag reg.anny:5000/devnodeapp:$(date +%s)
-          docker build . --file Dockerfile --tag dahknesh232/testapps:devnodeapp-$(date +%s)
+          docker build . --file nodejs_apps/dev-app/Dockerfile --tag reg.anny:5000/devnodeapp:$(date +%s)
+          docker build . --file nodejs_apps/dev-app/Dockerfile --tag dahknesh232/testapps:devnodeapp-$(date +%s)
 
   push_dev_app:
     name: Push Docker image to Docker Hub
